k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: template-ingress
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - template.nimeji.com
      secretName: tls-secret-prod
  rules:
    - host: template.nimeji.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: template-app-service
                port:
                  number: 8080
  ingressClassName: nginx
